@@ -2,6 +2,9 @@ $Id$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+- initial support for dhcp-pd ipv6 lan assignment , requires /usr/local/sbin/dhcp6c and
+  /etc/dhcp6c-exit-hooks
+
 - fix typo in dns-rebind description
 
 - change dns-rebind to off by default, updated text description of this feature
